# kimi-ai-engineering-skills-ecosystem

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  sandbox-executor.yaml
skills/: graphify-skills.py  manifest.sha256  pyproject.toml  sandbox-executor.yaml  seccomp-default.json
skills/address-pr-comments/: SKILL.md
skills/adr-machine-capture/: SKILL.md
skills/adversarial-tester/: SKILL.md
skills/adversarial-tester-expanded/: SKILL.md
skills/ai-agent-instructions/: SKILL.md
skills/api-contract-tester/: SKILL.md
skills/api-version-guard/: SKILL.md
skills/architecture-decision-gate/: SKILL.md
skills/architecture-design/: SKILL.md
skills/architecture-evolution/: SKILL.md
skills/architecture-fitness-function/: SKILL.md
skills/artifact-verifier/: SKILL.md
skills/back-propagation-protocol/: SKILL.md
skills/blast-radius-calculator/: SKILL.md
skills/boundary-enforcer/: SKILL.md
skills/brownfield-intelligence/: SKILL.md
skills/calibration-publisher/: SKILL.md
skills/canary-orchestrator/: SKILL.md
skills/chaos-engineering-suite/: SKILL.md
skills/ci-cd-integrator/: SKILL.md
skills/code-tester/: SKILL.md  sandbox-config.yaml
skills/config-profile-manager/: SKILL.md
skills/cost-tier-security-gate/: SKILL.md
skills/cross-cutting-concern-weaver/: SKILL.md
skills/dependency-manager/: SKILL.md
skills/dependency-resolver/: SKILL.md  manifest.json
skills/dev-api-designer/: SKILL.md
skills/dev-ci-cd-pipeline/: SKILL.md
skills/dev-code-generator/: SKILL.md
skills/dev-container-builder/: SKILL.md
skills/dev-database-migrator/: SKILL.md
skills/dev-debug-assistant/: SKILL.md
skills/dev-dependency-manager/: SKILL.md
skills/dev-docs-maintainer/: SKILL.md
skills/dev-git-workflow/: SKILL.md
skills/dev-incident-responder/: SKILL.md
skills/dev-infrastructure-coder/: SKILL.md
skills/dev-observability-setup/: SKILL.md
skills/dev-performance-profiler/: SKILL.md
skills/dev-security-scanner/: SKILL.md
skills/dev-test-automation/: SKILL.md
skills/documentation-synthesizer/: SKILL.md
skills/drift-monitor/: SKILL.md
skills/drift-statistical-validator/: SKILL.md
skills/dynamic-analyzer/: SKILL.md
skills/dynamic-boundary-validator/: SKILL.md
skills/ecosystem-integrator/: SKILL.md
skills/egress-dpi-guard/: SKILL.md
skills/error-policy/: SKILL.md
skills/federated-memory-mesh/: SKILL.md
skills/formal-verification-assistant/: SKILL.md
skills/gemini-router/: SKILL.md
skills/graphify/: SKILL.md
skills/graphify-out/: GRAPH_REPORT.md  graph.html
(+418 files in other folders)
